force-app/main/default/objects/ObjectSetting__mdt/ObjectSetting__mdt.object-meta.xml
<CustomObject>
    <label>ObjectSetting</label>
    <pluralLabel>ObjectSettings</pluralLabel>
</CustomObject>