force-app/main/default/objects/ObjectSetting__mdt/fields/ApexHandler__c.field-meta.xml
<CustomField>
    <fullName>ApexHandler__c</fullName>
    <defaultValue>&quot;SYS_ApplicationService&quot;</defaultValue>
    <label>ApexHandler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>