force-app/main/default/objects/ObjectSetting__mdt/fields/ExternalFieldApi__c.field-meta.xml
<CustomField>
    <fullName>ExternalFieldApi__c</fullName>
    <label>ExternalFieldApi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>