force-app/main/default/objects/ObjectSetting__mdt/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <label>IntegrationType</label>
    <referenceTo>IntegrationSetting__mdt</referenceTo>
    <relationshipLabel>ObjectSettings</relationshipLabel>
    <relationshipName>ObjectSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>