force-app/main/default/objects/ObjectSetting__mdt/fields/isInboundList__c.field-meta.xml
<CustomField>
    <fullName>isInboundList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInboundList</label>
    <type>Checkbox</type>
</CustomField>