force-app/main/default/objects/ObjectSetting__mdt/fields/ResourcePath__c.field-meta.xml
<CustomField>
    <fullName>ResourcePath__c</fullName>
    <label>ResourcePath</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>