force-app/main/default/objects/ObjectSetting__mdt/fields/TriggerEvents__c.field-meta.xml
<CustomField>
    <fullName>TriggerEvents__c</fullName>
    <label>TriggerEvents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>